tests/error/type_errors/and_not_bool_right.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo(x: bool) -> bool:
6:        return x and "xx"
                       ^^^^
GuppyTypeError: Expected expression of type `bool`, but got `'xx'` of type `str`
